Bug 162050 - Unsubscribing from IMAP folder shows bogus error messages and then crashes
Summary: Unsubscribing from IMAP folder shows bogus error messages and then crashes
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: IMAP (other bugs)
Version First Reported In: 1.9.50
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-05-13 16:15 UTC by Will Stephenson
Modified: 2008-05-16 18:16 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Will Stephenson 2008-05-13 16:15:11 UTC
Version:           1.9.50 (using 4.00.73 (KDE 4.0.73 >= 20080507, compiled sources)
Compiler:          gcc
OS:                Linux (i686) release 2.6.25-26-default

Unsubscribing from IMAP folder shows bogus error messages and then crashes

Reporting for tmcguire so he can track showstoppers.
Comment 1 Hatto Von Hatzfeld 2008-05-13 20:54:24 UTC
I just made this experience:

There was an IMAP account and some filter rules with references to this account. When I unsubscribed that account (leaving other imap accounts unchanged) and closed kmail a bit later, the GUI of kmail disappeared but one kmail process continued to run, consuming 100% of one CPU. This process was killed later by a shutdown, but afterwards each start of kmail failed, i.e. it caused one kmail process to run at 100%, but the kmail GUI did not appear (no error messages when starting it from konsole).

My solution: I discovered that in ~/.kde/share/apps/kmail/imap/ there were still a file and a folder (named .$ID.index.ids and .$ID.index.directory, while the files $ID and .$ID.index lacked) of the unsubscribed imap account, and the ID of that account still appeared in several places of the config file ~/.kde/share/config/kmailrc. I removed those two files and substituted all mentioned folders with that ID in ~/.kde/share/config/kmailrc by some other folders. Afterwards kmail started (almost) normally.

My version: kmail 1.9.1 of KDE 3.5.1 installed from SuSE RPM kdepim3-3.5.1-41.36 (lib64).
Comment 2 Thomas McGuire 2008-05-16 18:16:54 UTC
SVN commit 808440 by tmcguire:

Don't crash after unsubscribing from a folder and then synching the (DIMAP-) account

BUG: 162050


 M  +1 -0      kmsystemtray.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=808440