Don't crash after unsubscribing from a folder and then synching the (DIMAP-) account

BUG: 162050

svn path=/trunk/KDE/kdepim/; revision=808440